Fixes button covering title

--- a/src/styles/pages/_opportunity.scss
+++ b/src/styles/pages/_opportunity.scss
@@ -115,6 +115,9 @@
 
   .download-container{
     position: relative;
+    .card-header{
+      padding-right: 140px;
+    }
   }
 
   .download-container-header{
